test code 수정